# winclip

./: .gitignore  Cargo.toml  High-Level-Design.md  README.md  ROADMAP.md
src/: lib.rs
tests/: cli.rs
